--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -1,3 +1,12 @@
 <footer class="pageFooter">
-
+	<div class="inner">
+		<ul class="menu">
+			<li><a href="#">Mares</a></li>
+			<li><a href="#" class="active">Stallions</a></li>
+			<li><a href="#">Foals</a></li>
+			<li><a href="#">Sale Horses</a></li>
+			<li><a href="#">News</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</div>
 </footer>
