--- a/src/html/templates/main.html
+++ b/src/html/templates/main.html
@@ -5,7 +5,11 @@
 
 {{= it.include("header") }}
 
-{{= it.document }}
+<div class="pageContent">
+	<div class="inner">
+		{{= it.document }}
+	</div>
+</div>
 
 {{= it.include("footer") }}
 
