--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -5,10 +5,12 @@
 		</a>
 		<nav class="pageMenu">
 			<ul>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
-				<li><a href="#"></a></li>
+				<li><a href="#">Mares</a></li>
+				<li><a href="#" class="active">Stallions</a></li>
+				<li><a href="#">Foals</a></li>
+				<li><a href="#">Sale Horses</a></li>
+				<li><a href="#">News</a></li>
+				<li><a href="#">Contact</a></li>
 			</ul>
 		</nav>
 	</div>
