--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,9 +1,18 @@
+@import 'plugins/reset';
+@import 'plugins/magnific-popup';
+
 //import helpers
 @import 'helpers/helpers';
 
-//import screen declarations
-@import 'core/common';
-@import 'core/main';
+@import 'core/0.vars';
 
-//import responsive declarations
-@import 'responsive/responsive';
+//import screen declarations
+@import 'core/1.common';
+@import 'core/2.formatted';
+@import 'core/footer';
+@import 'core/header';
+@import 'core/home';
+@import 'core/text';
+@import 'core/list';
+@import 'core/profile';
+@import 'core/news';
