--- a/src/sass/core/news.scss
+++ b/src/sass/core/news.scss
@@ -118,11 +118,13 @@
 		border: 2px solid #ececec;
 		border-radius: 2px;
 		position: relative;
-		padding: 7px 105px 7px 7px;
-		min-height: 100px;
 		margin-bottom: 6px;
+		@include clear();
 		
 		.text{
+			float: left;
+			width: 313px;
+			padding: 7px 0 7px 7px;
 			font-size: 11px;
 			font-size: 1.1rem;
 			color: #828281;
@@ -130,11 +132,15 @@
 		}
 		
 		.photo{
-			@include absR(-1px, -1px);
+			float: right;
+			width: 99px;
+			@include rel(1px, -1px);
+			margin-bottom: -2px;
 			
 			img{
 				display: block;
-				width: 100%;
+				max-width: 100%;
+				margin: 0 0 0 auto;
 			}
 		}
 	}
